<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="onBackPress"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/tv_small_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#636D7A" />

                <TextView
                    android:id="@+id/tv_small_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/edit"
                    android:textColor="#636D7A"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/img_back"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/placeholder"
                app:riv_border_width="0dp"
                app:riv_corner_radius="10dp"
                app:riv_mutate_background="false"
                app:riv_oval="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_grey"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_grey"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_product_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_desc"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:text="@string/sanitisation"
                android:textColor="#636D7A"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_grey"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_sanitised_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sanitised_by"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_grey"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_how_often_it_is_cleaned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/how_often_it_is_cleaned"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:text="@string/last_clean_date"
                android:textColor="#636D7A"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_grey"
                android:gravity="center_vertical"
                android:onClick="selectDateClicked"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:text="@string/click_here_to_select_date"
                    android:textColor="#636D7A" />

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:text="@string/last_clean_time"
                android:textColor="#636D7A"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_grey"
                android:gravity="center_vertical"
                android:onClick="selectTimeClicked"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:text="@string/click_here_to_select_time"
                    android:textColor="#636D7A" />

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_access_time_24" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/filled_black"
                android:onClick="saveBtnClicked"
                android:text="@string/add_product"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>