<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="25dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="onBackPress"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_back"
            android:padding="2dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorThemeOrange"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_small_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="50dp"
            android:padding="2dp"
            android:text="Hello,"
            android:textAlignment="viewStart"
            android:textColor="@color/colorThemeLightGrey"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_small_title"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:text="Login first to continue"
            android:textAlignment="viewStart"
            android:textColor="@color/colorThemeMediumGrey"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/colorThemeInputHint"
                app:hintTextColor="@color/colorThemeInputHint">

                <com.gd70.android.validator.ValidatorEditText
                    android:id="@+id/edt_email"
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_theme_grey"
                    android:inputType="textEmailAddress"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorThemeTextColor"
                    app:checkType="email"
                    app:invalidBackground="@drawable/edt_theme_failure"
                    app:required="true"
                    app:validBackground="@drawable/edt_theme_success"
                    app:validDrawable="@drawable/ic_correct" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/colorThemeInputHint"
                app:hintTextColor="@color/colorThemeInputHint">

                <com.gd70.android.validator.ValidatorEditText
                    android:id="@+id/edt_password"
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_theme_grey"
                    android:inputType="textPassword"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorThemeTextColor"
                    app:checkType="alphanumeric"
                    app:invalidBackground="@drawable/edt_theme_failure"
                    app:required="true"
                    app:validBackground="@drawable/edt_theme_success"
                    app:validDrawable="@drawable/ic_correct" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_login_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_public_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Public User" />

                <RadioButton
                    android:id="@+id/rb_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Admin" />
            </RadioGroup>
        </LinearLayout>

        <!--android:onClick="openForgotPasswordActivity"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_small_title"
            android:layout_marginTop="35dp"
            android:visibility="gone"
            android:alpha=".5"
            android:padding="2dp"
            android:text="Forgot password?"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorThemeTextColor"
            android:textSize="12dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_purple"
            android:onClick="onLoginUserPressed"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_open_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_small_title"
            android:layout_marginTop="35dp"
            android:alpha=".5"
            android:padding="2dp"
            android:text="Don’t have an account yet? Create Here!"
            android:textAlignment="center"
            android:textColor="@color/colorThemeTextColor"
            android:textSize="12dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>