<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingEnd="25dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="sean.app.ui.activities.auth.registration.RegisterActivity">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:onClick="onBackPress"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_back"
                android:padding="2dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorThemeOrange"
                android:textSize="40dp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_small_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:padding="2dp"
                android:text="Register now free"
                android:textAlignment="viewStart"
                android:textColor="@color/colorThemeLightGrey"
                android:textSize="22dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="Your name"
                android:textColorHint="@color/colorThemeInputHint"
                app:hintTextColor="@color/colorThemeInputHint">

                <com.gd70.android.validator.ValidatorEditText
                    android:id="@+id/edt_name"
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_theme_grey"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorThemeTextColor"
                    app:checkType="username"
                    app:invalidBackground="@drawable/edt_theme_failure"
                    app:required="true"
                    app:validBackground="@drawable/edt_theme_success"
                    app:validDrawable="@drawable/ic_correct" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/colorThemeInputHint"
                app:hintTextColor="@color/colorThemeInputHint">

                <com.gd70.android.validator.ValidatorEditText
                    android:id="@+id/edt_email"
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_theme_grey"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorThemeTextColor"
                    app:checkType="email"
                    app:invalidBackground="@drawable/edt_theme_failure"
                    app:required="true"
                    app:validBackground="@drawable/edt_theme_success"
                    app:validDrawable="@drawable/ic_correct" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/colorThemeInputHint"
                app:hintTextColor="@color/colorThemeInputHint">

                <com.gd70.android.validator.ValidatorEditText
                    android:id="@+id/edt_password"
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_theme_grey"
                    android:inputType="textPassword"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorThemeTextColor"
                    app:checkType="alphanumeric"
                    app:invalidBackground="@drawable/edt_theme_failure"
                    app:required="true"
                    app:validBackground="@drawable/edt_theme_success"
                    app:validDrawable="@drawable/ic_correct" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Repeat password"
                android:textColorHint="@color/colorThemeInputHint"
                app:hintTextColor="@color/colorThemeInputHint">

                <com.gd70.android.validator.ValidatorEditText
                    android:id="@+id/edt_repeat_password"
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_theme_grey"
                    android:inputType="textPassword"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorThemeTextColor"
                    app:checkType="alphanumeric"

                    app:invalidBackground="@drawable/edt_theme_failure"
                    app:required="true"
                    app:validBackground="@drawable/edt_theme_success"
                    app:validDrawable="@drawable/ic_correct" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_purple"
                android:onClick="onRegisterUserClicked"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_small_title"
                android:layout_marginTop="35dp"
                android:alpha=".5"
                android:padding="2dp"
                android:text="Already have an account? Login Here"
                android:textAlignment="center"
                android:textColor="@color/colorThemeTextColor"
                android:textSize="12dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>